changed mail sender name

--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ MAIL_USERNAME=rajeshtagore@gmail.com
 MAIL_PASSWORD=hniweanvmcgqmwfu
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="rajeshtagore@gmail.com"
-MAIL_FROM_NAME="TOT School Support"
+MAIL_FROM_NAME="1000+ Support"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
